--- a/app/templates/payment.html
+++ b/app/templates/payment.html
@@ -165,8 +165,7 @@
 
   <section class="payment-section">
     <h1>Kurzy:</h1>
-
-    <div class="course-offerings">
+    <div class="course-offerings">¨
       <!-- KARTA: KOMPLET-->
       <div class="course-card">
         <h3>Komplet</h3>
