--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -1,3 +1,4 @@
+
 /* ===== ZÁKLAD ===== */
 html {
   font-size: 100%;
@@ -158,8 +159,10 @@ header {
   flex: 1 1 200px;
 }
 .left-col p, .right-col p {
-  margin: 0.3em 0;
+  font-size: clamp(0.9rem, 1.3vw, 2rem);
+  font-weight:400 ;
 }
+
 .left-col strong, .right-col strong {
   display: block;
   margin-bottom: 0.3em;
@@ -273,3 +276,4 @@ footer {
     display: none;
   }
 }
+right-col
